@@ -1,0 +1,8 @@
+all: main
+
+main: main.c
+	gcc -Wall -Werror -ggdb main.c -o main
+
+clean: 
+	rm main
+
